refactor: domain/business separation; enrollment flow; auth/validation; DTO updates